made: docs refactoring
